--- a/package.json
+++ b/package.json
@@ -1,17 +1,42 @@
 {
-  "name": "e_logistic_server",
+  "name": "qr-id-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prod": "NODE_ENV=production node src/index.js",
+    "dev": "NODE_ENV=development node src/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "docs": "node src/doc.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "rethinkdb": "^2.3.3"
+    "@sendgrid/mail": "^6.3.1",
+    "body-parser": "^1.18.3",
+    "bwip-js": "^1.7.2",
+    "cluster": "^0.7.7",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "express": "^4.16.4",
+    "express-fileupload": "^1.1.3-alpha.2",
+    "express-jwt": "^5.3.1",
+    "firebase-admin": "^7.1.1",
+    "glob": "^7.1.3",
+    "json2yaml": "^1.1.0",
+    "jsonwebtoken": "^8.5.0",
+    "lodash": "^4.17.11",
+    "rethinkdb": "^2.3.3",
+    "socket.io": "^2.2.0",
+    "swagger-jsdoc": "^3.2.8",
+    "swagger-ui-express": "^4.0.2",
+    "uuid": "^3.3.2",
+    "validator": "^10.11.0"
+  },
+  "devDependencies": {
+    "jsdoc-to-markdown": "^4.0.1",
+    "postman2apiary": "^1.0.5",
+    "swagger2blueprint": "^1.1.0"
   }
 }
