--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "firebase-admin": "^7.1.1",
     "glob": "^7.1.3",
     "json2yaml": "^1.1.0",
-    "jsonwebtoken": "^8.5.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "rethinkdb": "^2.3.3",
+    "shortid": "^2.2.14",
     "socket.io": "^2.2.0",
     "swagger-jsdoc": "^3.2.8",
     "swagger-ui-express": "^4.0.2",
